# SimplePlatformer

./: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  Game.h  main.cpp  platform.cpp  platform.h  platform.h.in
src/input/: GameplayInputManager.cpp  GameplayInputManager.h  InputManager.cpp  InputManager.h
src/input/menu/: Button.cpp  Button.h  MenuInputManager.cpp  MenuInputManager.h
src/input/ui/: Button.cpp  Button.h  UIInputManager.cpp  UIInputManager.h
src/resources/levels/: test.splevel
src/scenes/: GameEndScene.cpp  GameEndScene.h  GameplayScene.cpp  GameplayScene.h  MainMenu.cpp  MainMenu.h  Scene.cpp  Scene.h  UIScene.cpp  UIScene.h
src/scenes/drawables/: AnimatedSprite.cpp  AnimatedSprite.h
src/scenes/gameplay/: BackgroundParallaxObject.cpp  BackgroundParallaxObject.h  CollectibleObject.cpp  CollectibleObject.h  EnemyObject.cpp  EnemyObject.h  FlatPlatformObject.cpp  FlatPlatformObject.h  GameObject.cpp  GameObject.h  GoombaObject.cpp  GoombaObject.h  HumanoidObject.cpp  HumanoidObject.h  ICollidable.h  IGameObject.cpp  IGameObject.h  IPhysicsObject.h  LightBulbObject.cpp  LightBulbObject.h  LightningObject.cpp  LightningObject.h  PlayerObject.cpp  PlayerObject.h  ZombieObject.cpp  ZombieObject.h
src/scenes/resources/: Font.h  Level.h  Resource.h  ResourceManager.h  Texture.h
src/userdata/: LevelDescription.cpp  LevelDescription.h  SettingsManager.cpp  SettingsManager.h  UserdataManager.cpp  UserdataManager.h
src/util/: IUpdateable.h
